--- a/PPIDM_pvalue_analysis.ipynb
+++ b/PPIDM_pvalue_analysis.ipynb
@@ -138,29 +138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "6594"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 21,
+   "outputs": [],
    "source": [
-    "gold = ppidm[ppidm.CLASS =='Gold']\n",
-    "len(gold)\n",
-    "# with open('resultdata/interactions_gold', 'w') as f:\n",
-    "#     for index, row in gold.iterrows():\n",
+    "silver = ppidm[ppidm.CLASS =='Bronze']\n",
+    "# with open('resultdata/interactions_bronze', 'w') as f:\n",
+    "#     for index, row in silver.iterrows():\n",
     "#         f.write(f\"{row['D1']}\\t{row['D2']}\\n\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-22T23:34:32.216450Z",
-     "end_time": "2023-06-22T23:34:32.227378Z"
+     "start_time": "2023-06-23T00:01:16.615613Z",
+     "end_time": "2023-06-23T00:01:18.065152Z"
     }
    }
   },
